--- a/Accident_Prevention_System/index.ipynb
+++ b/Accident_Prevention_System/index.ipynb
@@ -58,11 +58,11 @@
     "# данные для соединения с БД\n",
     "\n",
     "db_config = {\n",
-    "'user': 'praktikum_student',\n",
-    "'pwd': 'Sdf4$2;d-d30pp', \n",
-    "'host': 'rc1b-wcoijxj3yxfsf3fs.mdb.yandexcloud.net',\n",
-    "'port': 6432, \n",
-    "'db': 'data-science-vehicle-db' \n",
+    "'user': '***',\n",
+    "'pwd': '***', \n",
+    "'host': '***',\n",
+    "'port': ***, \n",
+    "'db': '***' \n",
     "} \n",
     "\n",
     "connection_string = 'postgresql://{}:{}@{}:{}/{}'.format(\n",
